skin/default/style.css
/*---- GENERAL ----*/
*{
    margin:0;
    padding:0;
}
body{
    font-family: 'Lucida Grande',sans-serif;
    background-color: #9AE4E8;
    background-image: url(page_top_gradient.png);
    background-repeat: repeat-x;
}


/*--- SPLIT MODE ---*/
#main-container{
    width:98%;
    float:left;
}
#twitter-container{
    width: 1%;
    float: right;
    visibility:hidden;
    margin-right:.3em;
    border-left:5px dashed #AFEFF1;
}
#iframe-loading{
    position:absolute;
    color:#AFEFF1;
    font-size:3em;
    top:5em;
    left:70%;
    z-index:1;
}
#twitter-iframe{
    border:none;
    position:relative;
    z-index:2;
    width:100%;
    height:100%;
}
#close-split{
    position:fixed;
    right:10px;
    top:10px;
    background-color:#f33;
    z-index:3;
}
/*--- HEADER ---*/
#header{
    text-align:center;
    margin-top:2em;
}
#header h1{
    color:white;
    margin-bottom:.7em;
    width:330px;
    height:187px;
    position:absolute;
    left:22px;
    top:60px;
    background-image:url(logo.png);
    background-repeat:no-repeat;
    overflow:hidden;
}
#header h1 em{
    font-size:.4em;
    vertical-align:middle;
    left:152px;
    top:77px;
    position:absolute;
}
#header h1 a.title{
    margin-top:-2em;
    height:5em;
    display:block;
}
#header h1 em a,
#header h1 em a:visited{
    text-decoration:underline;
    color:#fff;
    vertical-align: middle;
    margin-left: 0.2em;
}
#header h1 em a img{
    border:none;
    margin-top: 1em;
}
#header a{
    text-decoration:none;
    color:#fff;
}
#header a:hover{
    text-decoration:underline;
}
#demo-button{
    display:inline-table;
    color:white;
    background-color:#c44;
    border:1px solid #333;
    padding:.2em;
    margin:.2em;
}
#service-description{
    background-color:#fff;
    padding:1em;
    width:49%;
    margin-top:5.5em;
    margin-bottom:1.5em;
    margin-left:377px;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
}
.splitted #service-description{
    display:none;
}
/*--- FEEDBACK MESSAGES --*/
#feedback{
    width:101%;
    text-align:center;
    font-size:1em;
    line-height:2em;
    border: 1px solid;
    margin:0;
    position:fixed;
    top:0px;
    z-index:10;
    visibility:hidden;
}
#feedback.FAIL{
    border-color:#c33;
    color:#c33;
    background-color:#fee;
    visibility:visible;
}
#feedback.WIN{
    border-color:#3c3;
    color:#3c3;
    background-color:#efe;
    visibility:visible;
}

/*---CONTENT -------*/
.content{
    width:89%;
    background-color:#fff;
    margin:auto;
    padding:1em;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
    padding-bottom:0px;
    margin-bottom:2em;
    margin-top:1em;
    position:relative;
    z-index:5;
}
.splitted .content{
    width:95%;
}
h3{
    font-size:1.7em;
    margin-bottom:.5em;
/*    display:none;*/
}
.step{
    overflow:hidden;
    padding-bottom:3em;
}

/*------ STEP 1 -------*/
#quote-size-limit{
    font-style:normal;
    font-weight:bold;
}
#status-id-field{
    font-size:1.5em;
    width:80%;
}
.splitted #status-id-field{
    height:4em;
}
#add-tweet-button{
    font-size:1.5em;
    vertical-align:bottom;
}
.help{
    font-size:small;
    color:#888;
    margin-bottom:1em;
}
.split-help{
    margin-top:1em;
    padding:1em;
    font-size:.8em;
    color:#888;
    border:2px solid #9AE4E8;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
    width:80%;
}
.split-help p{
}
.split-help b{
    color:#666;
}
#permalink-help{
}
#permalink-help.search{
}
.section-end{
    float:none;
    clear:both;
}
#add-tweet-form label{
    display:block;
}
.splitted .c1{
    border:1px solid #ccc;
    width:48%;
    position:fixed;
    background-color:#fff;
    opacity:.92;
    z-index:9;
}
/*------ STEP 2 -------*/
.splitted .c2{
    margin-top:25em;
}
.quoteurl-quote{
    padding-left:0px;
    padding:.6em;
    background-color:#ccc;
    border:1px solid #888;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
}
.published-quote-page .quoteurl-quote,
.published-quote-page #share{
    padding:.4em;
    border:none;
    width:80%;
    max-width:700px;
    margin:auto;
    margin-top:2em;
}
.published-quote-page .quoteurl-quote{
    background-color:#fff;
    margin-top:200px;
    position:relative;
    z-index:6;
}
#share{
    background-color:#AFEFF1;
    text-align:center;
    -moz-border-radius: .5em;
    -webkit-border-radius: .5em;
    border-radius: .5em;
    color: #fff;
}
#share a,
#share a:visited{
    color: #fff;
}
.text-entry{
    width:20em;
    font-family:monospace, courier;
    height:1.2em;
    font-size:.8em;
    white-space:nowrap;
    border:1px solid #999;
    vertical-align:middle;
}
#quoteURL-field{
}
#share textarea{
    overflow:hidden;
}
#include-style-checkbox{
    vertical-align: bottom;
}
#include-style-label{
    margin-left: 0.2em; 
    width: 5em; 
    font-size: xx-small; 
    vertical-align: middle;"
}
#dummy-tweet{
    color:#888;
    background-color:#fafafa;
}
#dummy-tweet a,
#dummy-tweet a:visited{
    color:#888 !important;
}
#dummy-tweet .thumb.vcard{
    opacity:.3;
}
.hentry{
    clear:both;
    list-style:none;
    padding-top:.7em;
    padding-bottom:.7em;
    border-top:1px dashed #ccc;
    position:relative;
    background-color:#fbfbfb;
}
.thumb.vcard{
    float:left;
    margin-right:1em;
    margin-left:.5em;
}
.thumb img{
    border:none;
}
a.author{
    font-weight:bold;
}
.entry-meta{
    color:#888;
    font-family:georgia;
    font-size:0.8em;
    font-style:italic;
}
.entry-meta a{
    color:#888;
    text-decoration:none;
}
.entry-meta a:hover{
    color:none;
    text-decoration:underline;
}
.status-body{
    margin-right:30px;
    padding-right:1em;
}
.hentry .actions{
    position:relative;
    top:-2em;
    left:100%;
    margin-left:-30px;
    width:30px;
    clear:both;
}
.del{
    color:#fff;
    background-color:#999;
    display:block;
    width:20px;
    text-align:center;
    padding-bottom:3px;
    font-size:13px;
    outline:1px outset;
    text-decoration:none;
}
li:hover{
    background-color:#fff;
}
li:hover .del{
    background-color:#c33;
}
.del:hover{
    background-color:#f33;
}
.del:active{
    outline:1px inset;
    font-size:12px;
}
.status{
    clear:both;
}
.center{
    margin:auto;
    float:none;
}
/*------ STEP 3 -------*/
#form-submit{
    text-align:right;
}
.huge-button{
    font-size:2em;
}
.huge-button.disabled{
    color:#ccc;
}

/*------ FOOTER -------*/

.footer{
    clear:left;
    font-size:x-small;
    text-align:center;
    margin-top:8em;
}
.footer em,
.footer em a{
    color:#777;
}
.footer p{
    margin-bottom:1em;
}
.validator-button img{
    border:none;
}

